--- a/styles.css
+++ b/styles.css
@@ -106,4 +106,136 @@ div, ul, nav, header, footer, a, li, label, body {
 /* -------- HEADER ENDS -------- */
 
 
+
 /* -------- PROFILE SECTION -------- */
+
+.profile {
+    container-type: inline-size;
+    container-name: profile;
+}
+
+.profile__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #9fb4c7;
+    max-width: 1400px;
+}
+
+.profile__data-container {
+    max-width: 600px;
+    padding: 12px;
+
+}
+
+.profile__img-container {
+    max-height: 500px;
+    overflow: hidden;
+}
+
+.profile__img {
+    max-width: 100%;
+    width: 720px;
+}
+
+h1 {
+    color: #7f7caf;
+}
+
+.profile__skills-container h2 {
+    color: #7f7caf;
+}
+
+.profile__skill {
+    list-style: none;
+    display: flex;
+    margin: 10px;
+    max-width: 600px;
+    margin-left: 0;
+    align-items: center;
+}
+
+.load-bar {
+    border: 2px solid #7f7caf;
+    border-radius: 8px;
+    color: #eeeeff;
+    padding: 2px;
+    font-size: 12px;
+    width: 80%;
+    margin: 4px;
+    margin-left: 0;
+}
+
+.profile__skill-name {
+    color: #eeeeff;
+}
+
+.load-bar__bar {
+    background-color: #7f7caf;
+    border-radius: 4px;
+    padding: 4px 6px;
+}
+
+.bar--80 {
+    width: 80%;
+}
+
+.bar--70 {
+    width: 70%;
+}
+
+.bar--60 {
+    width: 60%;
+}
+
+.bar--90 {
+    width: 90%;
+}
+
+
+/* -------- PROFILE QUERIES -------- */
+
+@container profile (min-width: 720px) {
+    .profile__wrapper {
+        flex-direction: row;
+        padding: 20px;
+        background-color: transparent;
+        height: 90vh;
+        margin: auto;
+    }
+
+    h1 {
+        margin-top: 0;
+        font-size: 4rem;
+        text-wrap: balance;
+    }
+
+    .profile__data-container {
+        background-color: #28587b;
+        display: flex;
+        align-items: center;
+        border-radius: 0px 25px 25px 0px;
+        box-shadow: 0 0 9px #0002;
+    }
+
+    .profile__data {
+        max-width: 620px;
+    }
+
+    .profile__img-container {
+        max-height: initial;
+        border-radius: 25px 0px 0px 25px ;
+    }
+
+    .profile__img {
+        height: 100%;
+        object-fit: cover;
+        width: 600px;
+    }
+}
+
+/* -------- PROFILE ENDS -------- */
+
+
+
+/* -------- PRORTFOLIO SECTION -------- */
