--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -23,6 +24,10 @@ div, ul, nav, header, footer, a, li, label, body {
     align-items: center;
     container-type: inline-size;
     container-name: header;
+    position: relative;
+    z-index: 10;
+    text-align: center;
+    font-size: 20px;
 }
 
 .header__open-nav-button {
@@ -239,3 +244,187 @@ h1 {
 
 
 /* -------- PRORTFOLIO SECTION -------- */
+
+.portfolio {
+    background-color: #28587b;
+    color: #eeeeff;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    min-height: 100vh;
+    container-type: inline-size;
+    container-name: portfolio;
+    justify-content: space-evenly;
+}
+
+.portfolio__title {
+    font-size: 3rem;
+    margin-bottom: 0;
+}
+
+.portfolio__project-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    max-width: 1300px;
+    margin: auto;
+    width: 100%;
+    gap: 12px;
+    padding: 12px;
+    min-height: 80vh;
+}
+
+.portfolio__project {
+    background-image: linear-gradient(#0009, #0009), url("multimedia/imagen.jpg");
+    background-position: center;
+    background-size: cover;
+    display: grid;
+    place-content: center;
+    border-radius: 12px;
+}
+
+.portfolio__project:hover {
+    opacity: 0.74;
+    outline: 3px solid #7f7caf;
+}
+
+
+/* -------- PRORTFOLIO QUERIES -------- */
+
+@container portfolio (min-width: 56.25rem) {
+    .portfolio__project-container {
+        grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
+    }
+
+    .portfolio__project:first-child {
+        grid-column: span 2;
+    }
+
+    .portfolio__project:nth-child(6) {
+        grid-column: span 2;
+    }
+}
+
+@container portfolio (min-width: 81.25rem) {
+    .portfolio__project-container {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+
+    .portfolio__project:first-child {
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+
+    .portfolio__project:nth-child(6) {
+        grid-column: span 4;
+    }
+}
+
+/* -------- PRORTFOLIO ENDS -------- */
+
+
+
+
+/* -------- CONTACT SECTION -------- */
+
+.form {
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0px;
+    container-type: inline-size;
+    container-name: form;
+}
+
+.form__title {
+    font-size: 2.4rem;
+}
+
+.form__form {
+    padding: 12px;
+    max-width: 600px;
+    width: 100%;
+    display: grid;
+    margin-bottom: 30px;
+}
+
+.form__input-container :is(input, textarea) {
+    width: 100%;
+    padding: 9px;
+    font-size: 16px;
+    margin: 4px;
+    border: none;
+    box-shadow: 2px 2px 4px #003;
+    background-color: #eeeeff;
+}
+
+.form__input-container textarea {
+    resize: none;
+    min-height: 120px;
+    font-family: inherit;
+}
+
+.form__input-container input[type="submit"] {
+    padding: 12px;
+    background-color: #7f7caf;
+    color: #eeeeff;
+}
+
+/* -------- CONTACT QUERIES -------- */
+
+@container form (min-width: 56.25rem) {
+    .form__form {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "name lastname"
+        "email email"
+        "message message"
+        "button button";
+        gap: 12px;
+        background-image: radial-gradient(#28587b04, #28587b50);
+        padding: 30px;
+        border-radius: 12px;
+        box-shadow: 0px 0px 40px #0006;
+    }
+
+    .form__input-container:first-child {
+        grid-area: name;
+    }
+
+    .form__input-container:nth-child(2) {
+        grid-area: lastname;
+    }
+
+    .form__input-container:nth-child(3) {
+        grid-area: email;
+    }
+
+    .form__input-container:nth-child(4) {
+        grid-area: message;
+    }
+
+    .form__input-container:nth-child(5) {
+        grid-area: button;
+    }
+
+    .form__input-container :is(input, textarea) {
+        box-shadow: none;
+        border-radius: 12px;
+    }
+}
+
+/* -------- CONTACT END -------- */
+
+
+
+/* -------- FOOTER SECTION -------- */
+
+footer {
+    padding: 60px;
+    text-align: center;
+    background-color: #28587b;
+    font-size: 22px;
+}
+
+/* -------- FOOTER END -------- */
